--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ip_filter LANGUAGES CXX)
+set(PATCH_VERSION 1 CACHE INTERNAL "Patch version. Default = 1")
+set(PROJECT_VERSION 0.0.${PATCH_VERSION} CACHE INTERNAL "Application version" FORCE)
+
+project(ip_filter VERSION ${PROJECT_VERSION} LANGUAGES CXX)
 
 if (NOT CMAKE_CXX_STANDARD)
     set(CMAKE_CXX_STANDARD 11)
@@ -10,3 +13,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_executable(${PROJECT_NAME} main.cpp)
+
+if (UNIX)
+    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+
+    set(CPACK_GENERATOR DEB)
+    set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+    set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+    set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ip filter application")
+    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "My Corporation")
+    include(CPack)
+endif()
